[package]
name = "wer_ist_staerker"
version = "0.1.0"
authors = ["André <andre.hodapp@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7" #für Zufallszahlen
#(https://www.joshmcguigan.com/blog/array-initialization-rust/)
arr_macro = "0.1.3" #um einfach Arrays zu erzeugen
